style.css
/* Reset styles */
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

/* Global styles */
.container {
    margin: 0 auto;
    max-width: 75rem;
    padding-left: 8rem;
    padding-right: 8rem;
}

/* BURGER MENU */
li {
    list-style: none;
}

a {
    text-decoration: none;
}

.header {
    font-family: 'poppins', sans-serif;
    background-color: #FFF;
    box-shadow: 0 0 10px rgba(0,0,0,.09);
    z-index: 1;
    width: 100%;
    position: fixed;
    
    
    
    
}

.navbar {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 4rem;
    
    
}

.nav-link i {
    margin-right: 0.5rem;

}

.hamburger {
    display: none;
}

.bar {
    display: block;
    width: 25px;
    height: 3px;
    margin: 5px auto;
    -webkit-transition: all 0.3s ease-in-out;
    transition: all 0.3s ease-in-out;
    background-color: #2d2e32;
}

.nav-menu {
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 3rem;
    
}



.nav-link {
    font-size: 1.2rem;
    font-weight: 500;
    color: #2d2e32;
}

.nav-link:hover {
    color: #436850;
}

.home {
    background-color: #f9f9f9;
    display: flex;
    flex-direction: column;
    height: 100vh;
    position: relative;
    width: 100%;
}

.content {
    align-items: center;
    display: flex;
    gap: 10rem;
    height: 65rem;
    justify-content: center;
    position: relative;
    flex-direction: column;
    font-family: 'roboto slab', serif;
}

.hero-main {
    align-items: center;
    display: flex;
    gap: 4rem;
    justify-content: center;
    position: relative;
}

.hero-text {
    display: flex;
    flex-direction: column;
    position: relative;
}

.hero-text h1 {
    color: #2d2e32;
    font-family: 'Poppins', sans-serif;
    font-size: 3.5rem;
    line-height: 1.2;
    margin-bottom: 2rem;
    margin-top: 2rem;
}

.hero-text p {
    color: #555;
    font-size: 1.2rem;
    font-weight: 500;
    line-height: 1.6;
}

.hero-icons {
    display: flex;
    gap: 3rem;
    font-size: 3rem;
    margin-top: 2rem;
}

.hero-icons i:hover {
    color: #436850;
}

.hero-icons i {
    color: #2d2e32;
}

@keyframes floating {
    0% {
        transform: translateY(0);
        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
    }
    50% {
        transform: translateY(-5px); /* Justera höjden efter behov */
        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3); /* Justera skuggan efter behov */
    }
    100% {
        transform: translateY(0);
        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
    }
}

.hero-img {
    background-image: url(img/linus.jpg);
    background-repeat: no-repeat;
    background-size: cover;
    height: 25rem;
    width: 100%;
    background-position: center;
    border-radius: 5%;
    position: relative;
    z-index: 1;
    animation: floating 3s ease-in-out infinite; /* Justera tiden efter behov */
}


.logos {
    display: flex;
    gap: 1.5rem;
    position: relative;
    flex-direction: row;
    font-size: 5rem;
}





.skills {
    align-items: center;
    display: flex;
    font-size: 1.7rem;
    justify-content: flex-start;
    width: 100%;
}

.skills p {
    border-right: 2px solid rgba(45, 46, 50, .5);
    color: #2d2e32;
    font-family: 'Poppins', sans-serif;
    font-weight: 600;
    margin-right: 7rem;
    padding-right: 2rem;
}

.skills i {
    text-shadow: 0 0 2px rgba(0, 0, 0, 0.3);
    transition: transform 0.3s ease-in-out;
}

.skills i:hover {
    transform: scale(1.3); 
}


.skills i:nth-child(1) {
    color: #E44D26;
}

.skills i:nth-child(2) {
    color: #3498DB;
}

.skills i:nth-child(3) {
    color: #F39C12;
}

.skills i:nth-child(4) {
    color: #61DAFB;
}

.skills i:nth-child(5) {
    color: #68A063;
}

.about-content {
    display: flex;
    gap: 4rem;
    justify-content: space-between;
    padding-top: 5rem;
    align-items: center;
    padding-bottom: 5rem
}

.about-img {
    background-image: url(img/linus3.jpg);
    background-repeat: no-repeat;
    height: 25rem;
    background-size: cover;
    width: 50%;
    background-position: center;
    border-radius: 5%;
    

}

.about-text {
    width: 50%;
    display: flex;
    flex-direction: column;
    
    
    
    
}

.about h2 {
    color: #436850;
    font-family: 'Poppins', sans-serif;
    font-size: 1.5rem;
    line-height: 1.2;
    margin-bottom: 1rem;
    
    
    
    
   
}

.about p {
    color: #555;
    font-size: 1.2rem;
    font-weight: 500;
    line-height: 1.6;
    
    font-family: 'roboto slab', serif;
}

.education {
    background-color: #f9f9f9;
    padding-top: 5rem;
    align-items: center;
    padding-bottom: 5rem;
 


}


.education-container {
    
    display: flex;
    justify-content: space-between;
        
    
}



.education-text {
    font-family: 'roboto slab', serif;
    width: 45%;
    
}

.education-text h3 {
    color: #436850;
    font-size: 1.5rem;
    margin-bottom: 1rem;
    
}

.education-text p {
    color: #555;
    font-size: 1.2rem;
    line-height: 1.6;
    
}


.project {
    background-color: #FFF;
    padding-top: 5rem;
    align-items: center;
    padding-bottom: 5rem;
    
}

.project h3 {
    color: #436850;
    font-size: 1.5rem;
    margin-bottom: 1rem;
    font-family: 'Poppins', sans-serif;
    text-align: center;
}

.contact {
    background-color: #f9f9f9;
    padding-top: 5rem;
    align-items: center;
    padding-bottom: 5rem;
    font-family: 'roboto slab', serif;

}

.contact-content {
    display: flex;
    flex-direction: column;
    gap: 3rem;
    text-align: left;
}

.contact-info {
    display: flex;
    gap: 4rem;
    text-align: left;
}

.contact-text {
    font-size: 1.2rem;
    line-height: 1.6;
    color: #555;
    display: flex;
    gap: 1rem;
    align-items: center;
}

.contact-content h3 {
    color: #436850;
    font-size: 1.5rem;
    font-family: 'Poppins', sans-serif;
}

.contact-content p {
    color: #555;
    font-size: 1.2rem;
    line-height: 1.6;
    font-weight: 700;
}

.contact-info i{
    align-items: center;
    background-color: #fff;
    border-radius: 50%;
    box-shadow: 0 0 10px rgba(0,0,0,.1);
    color: #436850;
    display: flex;
    font-size: 1.5rem;
    height: 3.5rem;
    justify-content: center;
    width: 3.5rem;
    
}

.contact-title {
    display: flex;
    flex-direction: column;
    gap: 1rem;
}


.footer {
    background-color: #2d2e32;
    color: #fff;
    padding-top: 3rem;
    padding-bottom: 3rem;
    text-align: center;
    font-family: 'poppins', serif;
}

.footer-links {
    display: flex;
    gap: 2rem;
    justify-content: center;
    
}

.footer-links a {
    color: #fff;
    font-size: 1.8rem;
    
}

.footer-links a:hover {
    color: #436850;
}

.footer-content {
    display: flex;
    justify-content: space-between;
    align-items: center;
   
}


/* Media queries */
@media screen and (max-width: 900px) {
    .content {
        flex-direction: column;
        gap: 3rem;
        height: auto;
        text-align: center;
        
    }

    .hero-main {
        flex-direction: column-reverse;
        gap: 0rem;
        height: auto;
        text-align: center;
        padding-top: 6rem;
        
        
    }

    .home {
        height: auto;
        
        padding-bottom: 3rem;
    }
    
    .hero-icons {
        gap: 1.6rem;
        justify-content: center;
    }

    .skills {
        flex-direction: column;
        position: static;
    }

    .skills p {
        border-bottom: 2px solid rgba(45, 46, 50, .5);
        border-right: none;
        margin-bottom: 3rem;
        margin-right: 0;
        padding-bottom: 1rem;
        padding-right: 0;
    }

    .hero-img {
        height: 20rem;
        width: 20rem;
    }

    .container {
        padding-left: 2rem;
        padding-right: 2rem;
        max-width: 100%;
    }

    .logos {
        font-size: 3.5rem;
    }
    
    .about-content {
        align-items: center;
        flex-direction: column;
        gap: 0rem;
        height: auto;
        text-align: center;
        padding-top: 3rem;
        
    }

    .about-content h2 {
        margin-bottom: 1rem;
        margin-top: 1.5rem;
    }
   
    .about-text {
        width: 100%;
       
    
    }
    .about-img {
        height: 20rem;
        width: 20rem;
    }
}




@media only screen and (max-width: 900px) {
    .nav-menu {
        position: fixed;

        left: -100%;
        top: 3rem;
        flex-direction: column;
        background-color: #fff;
        width: 100%;
        border-radius: 10px;
        text-align: center;
        transition: 0.3s;
        box-shadow: 0 10px 27px rgba(0, 0, 0, 0.05);
        z-index: 1;
        gap: 0rem;
        
    }

    .nav-link {
        color: #2d2e32;
        font-size: 1.5rem;
    }

    .nav-menu.active {
        left: 0;
    }

    .nav-item {
        margin: 1.5rem 0;
    }

    .hamburger {
        display: block;
        cursor: pointer;
        margin-left: auto;
        padding-right: 1rem;
    }

    .hamburger.active .bar:nth-child(2) {
        opacity: 0;
    }

    .hamburger.active .bar:nth-child(1) {
        transform: translateY(8px) rotate(45deg);
    }

    .hamburger.active .bar:nth-child(3) {
        transform: translateY(-8px) rotate(-45deg);
    }

    .education-container {
        padding-top: 1rem;
        padding-bottom: 2rem;
        display: flex;
        flex-direction: column;
        align-items: center;
        gap: 3rem;
            
        
    }

    .education-text {
        width: 100%;
    }

  

    .contact-info {
        flex-direction: column;
        gap: 2rem;
        text-align: center;
    }
}

@media screen and (max-width: 600px) {
 
    .footer-content {
        flex-direction: column;
        gap: 2rem;
    }
 

}

